    (Closes: #486544)

  [ Michael Meskes ]
  * Remove LocalConfig.kmk in clean target.
  * Source env.sh before starting to build.

  [ Loic Minier ]
  * Build virtualbox-ose, virtualbox-ose-dbg, and virtualbox-ose-guest-utils
    for lpia.
  * Wrap uploaders, bdeps, and deps on multiple lines to get cleaner diffs.
  * Cleanup upstreamversion computation and compute it only once.

 -- Michael Meskes <meskes@debian.org>  Tue, 17 Jun 2008 14:52:36 +0200

virtualbox-ose (1.6.2-dfsg-1) unstable; urgency=low

  [ Michael Meskes ]
  * New upstream version, closes: #479744, #482504, #483592
  * Removed unneeded xalan build dependency.
  * Added build dependency on libxslt and libxml.
  * Fixed LocalConfig.kmk to list new variables.
  * Use upstream provided X session file, but patch our changes in there.
  * Build with gcc/g++ 4.2.
  * Bumped Standards-Version to 3.8.0.

  [ Daniel Baumann ]
  * Removing ffmpeg recursively in dfsg-free target in rules.
  * Rediffing all patches.
  * Renumbering all patches.
  * Sanitizing dpatch headers.
  * Stripping off embedded copy of libpng in dfsg-free target of rules.
  * Stripping off embedded copy of libxml2 in dfsg-free target of rules.
  * Stripping off embedded copy of libxslt in dfsg-free target of rules.
  * Stripping off embedded copy of zlib in dfsg-free target of rules.
  * Improving long description of virtualbox-ose-guest-utils.
  * Correcting wrong virtualbox-ose-guest-utils package name in long
    description of virtuabox-ose-guest-source.
  * Adding note about kernel module requirement in virtualbox-ose long
    description.

 -- Michael Meskes <meskes@debian.org>  Sun, 11 May 2008 22:48:59 +0200

virtualbox-ose (1.5.6-dfsg-7) unstable; urgency=low

  [ Michael Meskes ]
  * Made virtualbox-ose-modules recommend virtualbox-ose-guest-utils.
  * Added recommendation on up-to-date xserver-xorg-core and conflict on
    older versions to guest-utils, closes: #476526