@@ -20,6 +20,13 @@ MAKE:=kmk
 
 upstreamversion := $(shell dpkg-parsechangelog | sed -n 's/^Version: *\([^-]\+\)-.\+/\1/p')
 
+DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
+
+VBOX_WITH_X11_ADDITIONS :=
+ifeq ($(filter-out i386 lpia,$(DEB_HOST_ARCH)),)
+VBOX_WITH_X11_ADDITIONS := 1
+endif
+
 # Generate README.Debian as text/html ...
 debian/README.Debian.html: debian/virtualbox-ose.README.Debian.xml
 	xsltproc --nonet --stringparam section.autolabel 1 \
@@ -36,11 +43,11 @@ debian/virtualbox-ose.README.Debian: debian/README.Debian.html
 env.sh: patch-stamp
 	dh_testdir
 	./configure --with-linux="/usr" --disable-kmods --with-gcc=/usr/bin/gcc-4.2 --with-g++=/usr/bin/g++-4.2
-	if [ "`dpkg --print-architecture`" = "i386" ]; then \
-		echo "VBOX_WITH_X11_ADDITIONS=1" >> LocalConfig.kmk; \
-	else \
-		echo "VBOX_WITH_X11_ADDITIONS=" >> LocalConfig.kmk; \
-	fi
+ifeq ($(VBOX_WITH_X11_ADDITIONS),)
+		echo "VBOX_WITH_X11_ADDITIONS=" >>LocalConfig.kmk
+else
+		echo "VBOX_WITH_X11_ADDITIONS=1" >>LocalConfig.kmk
+endif
 
 build: build-stamp
 build-stamp: env.sh
